East Diarenan Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -970,7 +970,7 @@
  PROV969: "Nancous"
  PROV970: "970"
  PROV971: "Lieref"
- PROV972: "972"
+ PROV972: "Coast of Horsaban"
  PROV973: "Sata"
  PROV974: "Mamnadar" #forbidden
  PROV975: "Saydan"
@@ -1497,7 +1497,7 @@
  PROV1496: "Tidiro"
  PROV1497: "Laabkot"
  PROV1498: "Ktukhawu"
- PROV1499: "1499"
+ PROV1499: "Gulf of Magaldan"
  PROV1500: "Kwachiquchucho"
  PROV1501: "Knechawa"
  PROV1502: "Nooro"
@@ -1522,7 +1522,7 @@
  PROV1521: "Tzotzomatli"
  PROV1522: "1522"
  PROV1523: "Quentli"
- PROV1524: "1524"
+ PROV1524: "Baddan Coast"
  PROV1525: "Neolololli"
  PROV1526: "1526"
  PROV1527: "Xochicuauhtla"
@@ -4597,7 +4597,7 @@
  PROV4596: "4596"
  PROV4597: "4597"
  PROV4598: "4598"
- PROV4599: "4599"
+ PROV4599: "Didarda" #hyaena frontier
  PROV4600: "4600"
  PROV4601: "4601"
  PROV4602: "4602"
@@ -4609,7 +4609,7 @@
  PROV4608: "4608"
  PROV4609: "4609"
  PROV4610: "4610"
- PROV4611: "4611"
+ PROV4611: "Magaldan" #first City
  PROV4612: "4612"
  PROV4613: "4613"
  PROV4614: "4614"
@@ -4622,37 +4622,37 @@
  PROV4621: "4621"
  PROV4622: "4622"
  PROV4623: "4623"
- PROV4624: "4624"
- PROV4625: "4625"
- PROV4626: "4626"
- PROV4627: "4627"
- PROV4628: "4628"
- PROV4629: "4629"
- PROV4630: "4630"
- PROV4631: "4631"
- PROV4632: "4632"
- PROV4633: "4633"
- PROV4634: "4634"
- PROV4635: "4635"
- PROV4636: "4636"
- PROV4637: "4637"
- PROV4638: "4638"
- PROV4639: "4639"
- PROV4640: "4640"
- PROV4641: "4641"
- PROV4642: "4642"
- PROV4643: "4643"
- PROV4644: "4644"
- PROV4645: "4645"
- PROV4646: "4646"
- PROV4647: "4647"
- PROV4648: "4648"
- PROV4649: "4649"
- PROV4650: "4650"
- PROV4651: "4651"
- PROV4652: "4652"
- PROV4653: "4653"
- PROV4654: "4654"
+ PROV4624: "Biyada"
+ PROV4625: "Beyoadi" #incense
+ PROV4626: "Dohgi" #river country
+ PROV4627: "Derha" #long road
+ PROV4628: "Firama"
+ PROV4629: "Simanki" #west pasture
+ PROV4630: "Sarradur" #river rise
+ PROV4631: "Siningi" #east pasture
+ PROV4632: "Durka" #riverland
+ PROV4633: "Messegot" #grain coast
+ PROV4634: "Darati" #cloth coast
+ PROV4635: "Ballajor"
+ PROV4636: "Safaisa" #sheer
+ PROV4637: "Marindan" #path
+ PROV4638: "Daladi" #frontier
+ PROV4639: "Banaid" #flat
+ PROV4640: "Halinshi" #cow
+ PROV4641: "Nammel"
+ PROV4642: "Kalunat" #fish coast
+ PROV4643: "Gududhi" #red river
+ PROV4644: "Horsaban"
+ PROV4645: "Gashirad" #island
+ PROV4646: "Dogorat" #wool
+ PROV4647: "Dekadag" #old port
+ PROV4648: "Gedoadi" #grass
+ PROV4649: "Usubad" #new town
+ PROV4650: "Ugfoti" #farthest coast
+ PROV4651: "Madowha" #blue river
+ PROV4652: "Hararda" #precipice
+ PROV4653: "Daremod" #grass
+ PROV4654: "Dabaig" #windland
  PROV4655: "4655"
  PROV4656: "4656"
  PROV4657: "4657"
