West Diarenan Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4581,22 +4581,22 @@
  PROV4580: "Kuorefet" #hill
  PROV4581: "Tanasa" #rise
  PROV4582: "Gabiy" #market
- PROV4583: "4583"
+ PROV4583: "Firiyam" #bring forth water
  PROV4584: "Almurtaf"
  PROV4585: "Almurtaf"
  PROV4586: "Mesiyewa"
  PROV4587: "Tettaka"
- PROV4588: "4588"
- PROV4589: "4589"
- PROV4590: "4590"
- PROV4591: "4591"
- PROV4592: "4592"
- PROV4593: "4593"
- PROV4594: "4594"
- PROV4595: "4595"
- PROV4596: "4596"
- PROV4597: "4597"
- PROV4598: "4598"
+ PROV4588: "Altada"
+ PROV4589: "Shagil" #hill
+ PROV4590: "Abugiba" #fish
+ PROV4591: "Shauwe" #incense
+ PROV4592: "Damarre" #gold
+ PROV4593: "Debbasuk" #Debba Market
+ PROV4594: "Dhaisil" #people chains
+ PROV4595: "Sabo" #waterless place
+ PROV4596: "Adkisuk" #cloth market
+ PROV4597: "Birur" #desert
+ PROV4598: "Dangar" #desert waste
  PROV4599: "Didarda" #hyaena frontier
  PROV4600: "4600"
  PROV4601: "4601"
@@ -4604,15 +4604,15 @@
  PROV4603: "4603"
  PROV4604: "4604"
  PROV4605: "4605"
- PROV4606: "4606"
- PROV4607: "4607"
- PROV4608: "4608"
- PROV4609: "4609"
- PROV4610: "4610"
+ PROV4606: "Regara" #well village
+ PROV4607: "Sikwir" #sugar
+ PROV4608: "Agab" #Mountain pass
+ PROV4609: "Haka"
+ PROV4610: "Danayam"
  PROV4611: "Magaldan" #first City
- PROV4612: "4612"
- PROV4613: "4613"
- PROV4614: "4614"
+ PROV4612: "Ela" #dry grass
+ PROV4613: "Gaigau" #now house
+ PROV4614: "Firiyam"
  PROV4615: "4615"
  PROV4616: "4616"
  PROV4617: "4617"
