Umati Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4602,7 +4602,7 @@
  PROV4601: "4601"
  PROV4602: "4602"
  PROV4603: "4603"
- PROV4604: "4604"
+ PROV4604: "Jalaba" #river beginning
  PROV4605: "4605"
  PROV4606: "Regara" #well village
  PROV4607: "Sikwir" #sugar
@@ -4613,15 +4613,15 @@
  PROV4612: "Ela" #dry grass
  PROV4613: "Gaigau" #now house
  PROV4614: "Firiyam"
- PROV4615: "4615"
- PROV4616: "4616"
- PROV4617: "4617"
- PROV4618: "4618"
- PROV4619: "4619"
- PROV4620: "4620"
- PROV4621: "4621"
- PROV4622: "4622"
- PROV4623: "4623"
+ PROV4615: "Siaata" #(river) rapids
+ PROV4616: "Diriina"
+ PROV4617: "Garaa" #mountain
+ PROV4618: "Ganfii" #wool village
+ PROV4619: "Ifree" #plain
+ PROV4620: "Suudirr" #wool plain
+ PROV4621: "Manboroo" #garden
+ PROV4622: "Dirrfaa" #plain
+ PROV4623: "Jalqaba" #Beginning
  PROV4624: "Biyada"
  PROV4625: "Beyoadi" #incense
  PROV4626: "Dohgi" #river country
