--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -988,3 +988,6 @@
  darrasian_sea_area: "Darrasian Sea"
  western_sahilan_coast_area: "West Sahilan Coast"
  yudeza_area: "Yudeza"
+
+ diarenan_gulf_area: "Gulf of Diarena"
+ dakhal_sea_area: "Dakhal Sea"
