--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -16,4 +16,4 @@
  hengtua_superregion: "Hengtua"
  cakrawalunia_superregion: "Cakrawalunia"
  south_pemenia_superregion: "South Pemenia"
- eastern_sahila_superregion: "Eastern Sahila"
+ eastern_sahila_superregion: "Kaheta"
