--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -970,7 +970,7 @@
  PROV969: "Nancous"
  PROV970: "970"
  PROV971: "Lieref"
- PROV972: "Coast of Horsaban"
+ PROV972: "Horsaban Bay"
  PROV973: "Sata"
  PROV974: "Mamnadar" #forbidden
  PROV975: "Saydan"
@@ -1512,7 +1512,7 @@
  PROV1511: "Marakucha"
  PROV1512: "Uxul'tu"
  PROV1513: "Wuaku'kutza"
- PROV1514: "1514"
+ PROV1514: "Eastern Dušagan Sea"
  PROV1515: "Waktis"
  PROV1516: "Mukraxitza"
  PROV1517: "Xilchitza"
@@ -1520,7 +1520,7 @@
  PROV1519: "Parcha"
  PROV1520: "Aneloloni"
  PROV1521: "Tzotzomatli"
- PROV1522: "1522"
+ PROV1522: "Gashiradian Coast"
  PROV1523: "Quentli"
  PROV1524: "Baddan Coast"
  PROV1525: "Neolololli"
@@ -1817,7 +1817,7 @@
  PROV1816: "Dakhani Tip"
  PROV1817: "1817"
  PROV1818: "1818"
- PROV1819: "1819"
+ PROV1819: "Southern Dakal Sea"
  PROV1820: "1820"
  PROV1821: "1821"
  PROV1822: "1822"
