fixes + peasants pastorialists estate rename

--- a/localisation/TD_000_kudigini_l_english.yml
+++ b/localisation/TD_000_kudigini_l_english.yml
@@ -56,3 +56,6 @@
  estate_kudigini_propagate_religion_trigger_tooltip: "REPLACE_ME"
  estate_kudigini_relations_with_dotf: "REPLACE_ME"
  estate_kudigini_relations_with_dotf_desc: "REPLACE_ME"
+
+ estate_kudigini_administrative_privileges: "[Root.GetKudiginiName] Self Government"
+ estate_kudigini_administrative_privileges_desc: "The [Root.GetAdjective] provinces are home to many different religions. By letting the [Root.GetKudiginiName] organize their own government in these communities we can ensure stability and peace in these pagan towns and villages."
