--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -26,3 +26,5 @@
  estate_ratsunikud: "Ratsunikud"
  estate_kakigos: "Kakigos"
  estate_amagari: "Amagari"
+ #peasants
+ estate_pastorialists: "Pastorialists"
