--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -114,7 +114,7 @@
  bohemia_tradenode: "Cemitonian Gulf"
  cacumuds_tradenode: "Adrianburg"
  natraki_tradenode: "Natraki"
- horasaban_tradenode: "Horsaban"
+ horasaban_tradenode: "Horasaban"
  husrhadigar_tradenode: "Husrhadigar"
  murtafia_tradenode: "Murtafia"
  qontara_tradenode: "Qontara"
