--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1571,8 +1571,8 @@
  BLL_ADJ: "Ballajorian"
  NAM: "Nammel"
  NAM_ADJ: "Nammelian"
- HOR: "Horsaban"
- HOR_ADJ: "Horsabanian"
+ HOR: "Horasaban"
+ HOR_ADJ: "Horasabanian"
  KWL: "Kwalen"
  KWL_ADJ: "Kwalenian"
  PAT: "Patrep"
