--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -970,7 +970,7 @@
  PROV969: "Nancous"
  PROV970: "970"
  PROV971: "Lieref"
- PROV972: "Horsaban Bay"
+ PROV972: "Horasaban Bay"
  PROV973: "Sata"
  PROV974: "Mamnadar" #forbidden
  PROV975: "Saydan"
@@ -4642,7 +4642,7 @@
  PROV4641: "Nammel"
  PROV4642: "Kalunat" #fish coast
  PROV4643: "Gududhi" #red river
- PROV4644: "Horsaban"
+ PROV4644: "Horasaban"
  PROV4645: "Gashirad" #island
  PROV4646: "Dogorat" #wool
  PROV4647: "Dekadag" #old port
