--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -704,7 +704,7 @@
  estate_privileges_and_agendas_events.3.l: "The Proposal of the [Root.GetJanissariesName]"
  estate_privileges_and_agendas_events.3.m: "The Proposal of the [Root.GetEunuchsName]"
  estate_privileges_and_agendas_events.3.n: "The Proposal of the [Root.GetPeasantryName]"
- estate_privileges_and_agendas_events.3.o: "The Proposal of the [Root.GetGhilmanName]"
+ estate_privileges_and_agendas_events.3.o: "The Proposal of the [Root.GetKudiginiName]"
  estate_privileges_and_agendas_events.6.t: "Selling of Crownland"
  estate_privileges_and_agendas_events.6.desc: "The treasury of our [Root.GovernmentName] is in a dire situation. Fortunately for us, our estates are very much interested in buying some of our land. Who should we sell our precious property to?"
  estate_privileges_and_agendas_events.6.a: "Sell the Crownland to everyone equally."
