--- a/localisation/TD_000_kudigini_l_english.yml
+++ b/localisation/TD_000_kudigini_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  estate_kudigini: "Kudigini" #do not fucking change this
- estate_kudigini_desc: ""
+ estate_kudigini_desc: "The Kudigini represent the caste of various scholas and clergymen in the nation who believe in the overarching doctrine of Midnima. Various religious groups are able to stop their squabbles if it means gaining more power in the nation."
 
  string_kudigini_this: "[This.GetKudiginiName]"
  country_estate_kudigini_name: "[This.GetKudiginiName]"
