East Buluban Ideas

--- a/localisation/TD_01_flavour_jambaka_l_english.yml
+++ b/localisation/TD_01_flavour_jambaka_l_english.yml
@@ -14,7 +14,26 @@
  west_buluban_controlled_minting_desc: "Najtungdak has one of the largest and most well run mints in the world, it sits atop a large well guarded gold mine that provides the mint with all of its gold. Extensive bureaucracy and military guards, aid the mint in preventing counterfeits, overminting and thievery."
  west_buluban_shipbuilders_of_bonatefes: "Shipbuilders of Bonatefes"
  west_buluban_shipbuilders_of_bonatefes_desc: "Bonatefes is where all the ships in the area are built, thus the Bonatefesi are renowned as efficient shipbuilders. The Bonatefesi have been brought to other harbours to educate them in shipbuilding."
- west_buluban_kasbaaku: "Kasbaaku"
- west_buluban_kasbaaku_desc: "Kasbaaku are histories and stories of the Western Buluban done through long songs. Families will often make their own Kasbaaku to teach their children fairy tales or family history. These Kasbaaku are often sung on voyages, while in ports it isn’t uncommon to hear sailors singing or humming them while loading or unloading cargo, as such these stories often spread across areas where they trade."
+ west_buluban_kasbaaku: "Western Kasbaaku"
+ west_buluban_kasbaaku_desc: "Kasbaaku are histories and stories of the Buluban done through long songs. Families will often make their own Kasbaaku to teach their children fairy tales or family history. These Kasbaaku are often sung on voyages, while in ports it isn’t uncommon to hear sailors singing or humming them while loading or unloading cargo, as such these stories often spread across areas where they trade."
  west_buluban_bosonapan_cele: "The Bosonapan Cele"
  west_buluban_bosonapan_cele_desc: "The Bosonapan Cele is a region off the coast of Imamlayka where most trade coming from West Sahila has to come through, leading the Western Buluban people to be in a perfect position to exert their influence. With the discovery of the new world the coast has become important to trade with the new world as well."
+ 
+ #East Buluban
+ east_buluban_group_ideas: "East Buluban Ideas"
+ east_buluban_group_ideas_bonuse: "East Buluban Ambition"
+ east_buluban_group_ideas_start: "East Buluban Traditions"
+ east_buluban_biiryonnent: "Biiryonnent"
+ east_buluban_biiryonnent_desc: "The Biiryonnent is a system where merchants work together with spies to report the goings on in different nations. The system has led to the Bimbiji people being naturally cautious of others, deterring others from spying on them."
+ east_buluban_teneran_caravans: "Teneran Caravans"
+ east_buluban_teneran_caravans_desc: "The Tenera desert is one of the only ways for land based trade moving from north to south and east to west, thus caravans from all sorts travel through it, including Bimbiji caravans. The Bimbiji have a very good reputation when trading, sometimes making merchants more likely to use their caravans instead of competing ones."
+ east_buluban_jambakan_history: "Jambakan History"
+ east_buluban_jambakan_history_desc: "Eastern Buluban peoples have a long tradition of fighting off raids from the Jambakan peoples, leading them to easily be brought into the fold of an organized army. The Bimbiji implemented strict rules and regulations on who can become a warrior."
+ east_buluban_bimbiji_spirit: "Bimbiji Spearhooks"
+ east_buluban_bimbiji_spirit_desc: "Cavalry has long been mainline in Teneran and Jambakan warfare and the Eastern Buluban have had to keep up. The Bimbiji cavalry have been outfitted with hooked spears to pull enemy cavalry from their mounts, and stab them while they are down."
+ east_buluban_kasxare: "Kasxare"
+ east_buluban_kasxare_desc: "Kasxare are songs that the Eastern Buluban sing while on military marches to improve morale. These songs are often about previous victories, families of those at war, and the future victories they will have."
+ east_buluban_kasbaaku: "Eastern Kasbaaku"
+ east_buluban_kasbaaku_desc: "Kasbaaku are histories and stories of the Buluban done through long songs. Families will often make their own Kasbaaku to teach their children fairy tales or family history. These Kasbaaku are often hummed or sung on caravans."
+ east_buluban_braissli_trade: "Braissli Trade"
+ east_buluban_braissli_trade_desc: "The tribes of the Braissli have garnered a strong friendship with the Eastern Buluban, often leading to marriages being frequent between the two. This relationship has continued even after the uniting of the Braissli under Šarikullu."
