--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -38,6 +38,9 @@
  kharont_estuary_modifier: "Kharont Estuary"
  senphab_estuary_modifier: "Senphab Estuary"
  dawba_estuary_modifier: "Dawba Estuary"
+ daren_estuary_modifier: "Daren Estuary"
+ angwar_estuary_modifier: "Angwar Estuary"
+ masryg_estuary_modifier: "Mašrig Estuary"
  
 
  uzkolian_toll: "Uzkolian Toll"
