--- a/localisation/TD_01_Flavour_Midnima_l_english.yml
+++ b/localisation/TD_01_Flavour_Midnima_l_english.yml
@@ -2,3 +2,33 @@
  midnima.1.t: "Faiths of Kaheta"
  midnima.1.desc: "Economic interest of various outside powers brought not only new ideas, but a plethora of new faiths, beliefs and moral systems. To not block the flow of trade, many of the people learned how to navigate the complex religious landscape, which soon developed into a new syncretic faith."
  midnima.1.a: "May Ilum bless your soul - or whatever other god you believe in..."
+
+ otigari_cult: "Otigari Syncretism"
+ otigari_cult_desc: "We have prioritized the teachings of our Otigari population, which greatly pleases them."
+ ilumist_cult: "Ilumist Syncretism"
+ ilumist_cult_desc: "We have prioritized the teachings of our Ilumist population, which greatly pleases them."
+ hayusidi_cult: "Hayusidi Syncretism"
+ hayusidi_cult_desc: "We have prioritized the teachings of our Hayusidi population, which greatly pleases them."
+ eopedian_cult: "Eopedian Syncretism"
+ eopedian_cult_desc: "We have prioritized the teachings of our Eopedian population, which greatly pleases them."
+ uttarian_cult: "Uttarian Syncretism"
+ uttarian_cult_desc: "We have prioritized the teachings of our Uttarian population, which greatly pleases them."
+
+ otigari_cult_unrest: "Tolerance of Otigaris"
+ ilumist_cult_unrest: "Tolerance of Ilumists"
+ hayusidi_cult_unrest: "Tolerance of Hayusidis"
+ eopedian_cult_unrest: "Tolerance of Eopedians"
+ uttarian_cult_unrest: "Tolerance of Uttarians"
+
+ otigari_cult_local_mod: "Tolerance of Otigaris"
+ ilumist_cult_local_mod: "Tolerance of Ilumists"
+ hayusidi_cult_local_mod: "Tolerance of Hayusidis"
+ eopedian_cult_local_mod: "Tolerance of Eopedians"
+ uttarian_cult_local_mod: "Tolerance of Uttarians"
+
+ desc_otigari_cult_local_mod: "Tolerance of Otigaris"
+ desc_ilumist_cult_local_mod: "Tolerance of Ilumists"
+ desc_hayusidi_cult_local_mod: "Tolerance of Hayusidis"
+ desc_eopedian_cult_local_mod: "Tolerance of Eopedians"
+ desc_uttarian_cult_local_mod: "Tolerance of Uttarians"
+
