dorchean fixes and adjustments

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -63,8 +63,8 @@
  
  estate_burghers_dorchean_fisheries: "Dorchean Fisheries"
  estate_burghers_dorchean_fisheries_desc: "Mixing warm and cold currents make the seas around the dorchean isels hold large populations of variety fishes making coastal settlements much more prosperous than those inland."
- estate_burghers_dorchean_fisheries_gt: "Reduces §YLocal Development Cost§! and increases §YLocal Goods Produced§! in all coastal provinces in §YDorchean Isles§!."
- estate_burghers_dorchean_fisheries_rt: "Removes reduced §YLocal Development Cost§! and increased §YLocal Goods Produced§! from all coastal provinces in §YDorchean Isles§!."
+ estate_burghers_dorchean_fisheries_gt: "Every fish producing province gains:\nLocal Development Cost: §Y-10.0%§!\nLocal Goods Produced Modifier: §G+15.0%§!"
+ estate_burghers_dorchean_fisheries_rt: "The modifier §Y'Dorchean Fisheries'§! is removed from all owned provinces."
  estate_burghers_dorchean_fisheries_modifier: "Dorchean Fisheries"
  desc_estate_burghers_dorchean_fisheries_modifier: "Mixing warm and cold currents make the seas around the dorchean isels hold large populations of variety fishes making coastal settlements much more prosperous than those inland."
 
