--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
- 
+ HIDDEN: "Hidden" 
+
  ALLOW_MERCENARY_RECRUITMENT_TT: "§GWe will be able to recruit Mercenaries Again.§!"
  DISALLOW_MERCENARY_RECRUITMENT_TT: "§RWe will not be able to recruit Mercenaries anymore.§!"
 
@@ -876,6 +877,6 @@
  tetrarchy_subject_overlord: "'Temporary' Relocation"
 
  saelian.17.t: "An Empty Throne"
- saelian.17.t.desc: "The Recent fall of Tetrarch [missing_tetrarch.GetName] has forced him to relocate their base of operation. A proposal was made to establish a new electoral capital in [potential_tetrarch_capital.GetName]. While the demand is absurd, we should follow the emperor's orders."
+ saelian.17.desc: "The Recent fall of Tetrarch [missing_tetrarch.GetName] has forced him to relocate their base of operation. A proposal was made to establish a new electoral capital in [potential_tetrarch_capital.GetName]. While the demand is absurd, we should follow the emperor's orders."
  saelian.17.a: "I didn't like this city anyway..."
  saelian.17.b: "We will not give up our land to anyone!"
