--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -147,7 +147,7 @@
  land_acquisition_desc: ""
  lenient_taxation: "Lenient Taxation"
  lenient_taxation_desc: ""
- AN_IQTA_TAXATION_POLICY: "An Iqta Taxation Policy"
+ AN_IQTA_TAXATION_POLICY: "An Zabayzkamian Taxation Policy"
  seize_clerical_holdings: "Seize Clerical Holdings"
  seize_clerical_holdings_desc: ""
  invite_minorities: "Invite Minorities from Abroad"
