--- a/localisation/cradle_of_civilization_l_english.yml
+++ b/localisation/cradle_of_civilization_l_english.yml
@@ -416,7 +416,7 @@
  alert_can_use_feudal_theocracy_ability_delayed: "$POWERS|Y$ can currently be used."
  alert_can_use_tribal_federation_ability_instant: "§YCan demand a Tribal Tribute!§!"
  alert_can_use_tribal_federation_ability_delayed: "$POWERS|Y$ can currently be demanded."
- IQTA_TAXATION_POLICY_PERIOD: "During this period you cannot enact another Iqta Taxation Policy."
+ IQTA_TAXATION_POLICY_PERIOD: "During this period you cannot enact another Zabayzkamian Taxation Policy."
  RELIGIOUS_SCHOLAR_EXPIRY_TITLE: "Religious Scholar Has Left"
  RELIGIOUS_SCHOLAR_EXPIRY_SETUP: "When a religious scholar leaves our country."
  RELIGIOUS_SCHOLAR_EXPIRY_HEADER: "Religious Scholar Has Left"
