--- a/localisation/dharma_l_english.yml
+++ b/localisation/dharma_l_english.yml
@@ -648,7 +648,7 @@
  NORTHERN_HEMISPHERE_WINTER: "Northern hemisphere Winter"
  GOTO_GOVERNMENT_REFORM_VIEW: "§YGovernment Reforms§!"
  GOTO_GOVERNMENT_REFORM_VIEW_DESC: "Enact or change reforms to giving you permanent benefits and enabling new mechanics."
- ability_iqta_mechanic: "Iqta Taxation"
+ ability_iqta_mechanic: "Zabayzkamian Taxation"
  mechanic_max_states: "Base number of states: $VALUE|Y$"
  mechanic_queen_no: "Does not have Consorts."
  mechanic_queen_yes: "Has Consorts."
