Bjateel Mechanics Part 1
After-reform mechanics

--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -454,7 +454,7 @@
  henga: "Henga"
  
  bjateel_animism: "Bjateel"
- bjateel_animism_religion_desc: "Local Animism flavour that believe animals are aspects of gods. Do better Description (WIP)."
+ bjateel_animism_religion_desc: "Bjateel is a name for a set of polytheistic beliefs held across Bkuslcuht and Tukyeung. Bjateelians believe in a plethora of gods, spirits, and holy sages, who achieved divinity through strict life and discipline."
  bjateel_animism_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  bjateel_animism_rebels_title: "Religious"
  bjateel_animism_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
