--- a/localisation/origins_l_english.yml
+++ b/localisation/origins_l_english.yml
@@ -808,7 +808,7 @@
  ZERO: "0"
  NUM_OF_CONVERTED_PROVINCES_COUNTER: "[This.num_converted_religion.GetValue]"
  ###JEWISH MECHANICS###
- JEWISH_ASPECTS_LONG: "Torah Aspects"
+ JEWISH_ASPECTS_LONG: "Church Aspects"
  JEWISH_ASPECTS_SHORT: "aspect"
  JUDAISM_HAS_ADM_ASPECT: "Has any £adm£ §YAspect§! active."
  celebrate: "Celebrate Festival"
