--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -1377,7 +1377,7 @@
  LEDGER_CENTRES_OF_TRADE_POWER_BONUS: "Power Bonus"
  FROM_FEROCITY: "From Ferocity: $VALUE|G$"
  PROVINCE_REBELS_SUPPRESSED: "This Province is having its Rebels suppressed by $ARMY|Y$."
- SYNAGOGUE_OF: "Synagogue of $COUNTRY$"
+ SYNAGOGUE_OF: "Church of $COUNTRY$"
  SYNAGOGUE_POWER: "Faith Power: $POWER|Y$"
  CELEBRATE: "Celebrate"
  SHOW_FILTERED_ASPECTS: "Select $ADMDIPMIL|Y$ $ASPECTS_LONG|Y$"
