--- a/localisation/TD_01_flavour_bjateel_l_english.yml
+++ b/localisation/TD_01_flavour_bjateel_l_english.yml
@@ -35,3 +35,8 @@
  BJATEEL_INCOME_COASTAL_DESC: "from coastal provinces production."
  
  BJATEEL_HAS_ADM_ASPECT: "Has any £adm£ §YGod§! active."
+
+ bjateel_at_least_100: "Bjateel Reformation Progress is at least §Y100§!."
+ bjateel_reform_progress: "Monthly Bjateel Reform Progress"
+ bjateel_reform_name: "Reformation Progress"
+ bjateel_reform_value: "[Root.bjateel_var.GetValue]"
