Buluban Rulers + Fix

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4401,9 +4401,9 @@
  PROV4400: "Elaamtoom" #Ilum's pass
  PROV4401: "Tenjin"
  PROV4402: "Kubdeky" #dye rivers
- PROV4403: "Kulbeong" #kulbeong land
+ PROV4403: "Kulbeong" #kulbeong
  PROV4404: "Bayoosa" #cloth
- PROV4405: "Hudaje" #hudaje lodge
+ PROV4405: "Huudaje" #huudaje
  PROV4406: "Kuuraywoow" #incense dry
  PROV4407: "Yakhtool" #bone field
  PROV4408: "Ndwentaw" #rain's gift
