Bjateel Mechanics part 2

--- a/localisation/TD_01_flavour_bjateel_l_english.yml
+++ b/localisation/TD_01_flavour_bjateel_l_english.yml
@@ -40,3 +40,36 @@
  bjateel_reform_progress: "Monthly Bjateel Reform Progress"
  bjateel_reform_name: "Reformation Progress"
  bjateel_reform_value: "[Root.bjateel_var.GetValue]"
+ bjateel_gain_and_lose_tooltip: "Defines how close we are to passing the religious reforms.\n§YIncreased by:§!\n -Having Loyal Clergy Estate\n -Having High Prestige\n -Having high ruler Administrative Skill\n -Through Random Events\n§YDecreased by:§!\n -Having Disloyal Clergy Estate\n -Having Low Prestige\n -Having Low Religious Unity\n -Having high ruler Military Skill\n -Through Random Events"
+ bjateel_button_1_tt: "§YFund State-Sanctioned Shrines§!"
+ Bjateel_rename_clergy_tt: "Clergy Estate will be renamed to §YPriesthood§!"
+ TD_State_Sanctioned_Shrines: "State Sanctioned Shrines"
+ bjateel_button_2_tt: "§YCodify Local Beliefs and Doctrines§!"
+ TD_Codified_Beliefs_And_Doctrines: "Codified Beliefs and Doctrines"
+ bjateel_button_3_tt: "§YRegulate visits of forgein Sages§!"
+ TD_Regulated_Sage_Visits: "Regulated Sage Visits"
+ 
+ bjateel_before_reform.1.t: "Conflict between rival shrines"
+ bjateel_before_reform.1.desc: ""
+ bjateel_before_reform.1.a: "Support the popular shrine"
+ bjateel_before_reform.1.b: "Support the secluded shrine"
+ bjateel_before_reform.2.t: "Celebrations of Festivals"
+ bjateel_before_reform.2.desc: ""
+ bjateel_before_reform.2.a: "Let us Rejoice!"
+ bjateel_before_reform.3.t: "Forgein Sage spreads forgein faith"
+ bjateel_before_reform.3.desc: ""
+ bjateel_before_reform.3.a: "So be it"
+ bjateel_before_reform.3.b: "Stop him!"
+ bjateel_before_reform.4.t: "Shamans discriminate against a new Shrine"
+ bjateel_before_reform.4.desc: ""
+ bjateel_before_reform.4.a: "It's their right to do so"
+ bjateel_before_reform.4.b: "Stop them!"
+ bjateel_before_reform.5.t: "Theological Debate"
+ bjateel_before_reform.5.desc: ""
+ bjateel_before_reform.5.a: "They are kinda right"
+ bjateel_before_reform.5.b: "They are wrong"
+ 
+ increase_bjateel_reform_5_tt: "Increase Bjateel Reformation Progress by §Y5%§!."
+ increase_bjateel_reform_10_tt: "Increase Bjateel Reformation Progress by §Y10%§!."
+ decrease_bjateel_reform_5_tt: "Decrease Bjateel Reformation Progress by §Y5%§!."
+ decrease_bjateel_reform_10_tt: "Decrease Bjateel Reformation Progress by §Y10%§!."
