Bjateel tweaks and fixes
Fixed AI being able to pick aspects before reforming, revamped one celebration tooltip, tweaked monthly bjateel reformation progress gain.

--- a/localisation/TD_01_flavour_bjateel_l_english.yml
+++ b/localisation/TD_01_flavour_bjateel_l_english.yml
@@ -27,6 +27,7 @@
  desc_bjateel_god_bsan_kap: "£adm£ §YGod§!\n§YCelebrate Festival§! gives us §Y+10%§! Land Morale for 5 years.\n\nBsan Kap is the Bjateel God of conflicts, and is patron of all soldiers and warriors"
  desc_bjateel_god_tlan_pog: "£adm£ §YGod§!\n§YCelebrate Festival§! gives us §Y-10%§! development cost for 5 years.\n\nTlan Pog is the Bjateel God of Prosperity, and is patron of all craftsmen and artists"
  desc_bjateel_god_rac_cim: "£adm£ §YGod§!\n§YCelebrate Festival§! gives us random category level 2 discounted advisor.\n\nRac Cim is the Bjateel God of Justice, and is patron of all judges and statemen"
+ bjateel_rac_cim_celebrate_tt: "We will gain random category §Ylevel 2§! advisor discounted for §Y50%§!."
  desc_bjateel_god_klag_car: "£adm£ §YGod§!\n§YCelebrate Festival§! gives us §Y+1§! years of income from all coastal provinces.\n\nKlag Car is the Bjateel God of Waters, and is patron of all aquatic life and fishermen"
  desc_bjateel_god_kne_gier: "£adm£ §YGod§!\n§YCelebrate Festival§! gives us §Y+10§! loyalty of all estates.\n\nKne Gier is the Bjateel God of Peace, and is patron of all diplomats and peaceful people"
  
@@ -40,7 +41,7 @@
  bjateel_reform_progress: "Monthly Bjateel Reform Progress"
  bjateel_reform_name: "Reformation Progress"
  bjateel_reform_value: "[Root.bjateel_var.GetValue]"
- bjateel_gain_and_lose_tooltip: "Defines how close we are to passing the religious reforms.\n§YIncreased by:§!\n -Having Loyal Clergy Estate\n -Having High Prestige\n -Having high ruler Administrative Skill\n -Through Random Events\n§YDecreased by:§!\n -Having Disloyal Clergy Estate\n -Having Low Prestige\n -Having Low Religious Unity\n -Having high ruler Military Skill\n -Through Random Events"
+ bjateel_gain_and_lose_tooltip: "Defines how close we are to passing the religious reforms.\n§YIncreased by:§!\n -Having Loyal Clergy Estate\n -Having High Prestige\n -Having high ruler Administrative Skill\n -Through Random Events\n§YDecreased by:§!\n -Having Disloyal Clergy Estate\n -Having Low Prestige\n -Having Low Religious Unity\n -Through Random Events"
  bjateel_button_1_tt: "§YFund State-Sanctioned Shrines§!"
  Bjateel_rename_clergy_tt: "Clergy Estate will be renamed to §YPriesthood§!"
  TD_State_Sanctioned_Shrines: "State Sanctioned Shrines"
