fixes + incident and a half no loc

--- a/localisation/TD_01_flavour_kabonen_l_english.yml
+++ b/localisation/TD_01_flavour_kabonen_l_english.yml
@@ -58,6 +58,7 @@
  KBN_Unlock_Alliance_of_states_tt: "Unlocks §YAlliance of States§! Tier 7 Government Reform"
  KBN_Unlock_integration_into_cakkecig_decision_tt: "Unlocks §YAssimilate into Cak'kecig Culture§! decision"
  KBN_Move_Culture_Into_Cakkecig_group_title: "Assimilate into Cak'kecig Culture"
+ KBN_Move_Culture_Into_Cakkecig_group_desc: "To solidify our unity with the local people, we will officialy adopt all of their customs as our own."
  KBN_Unlock_Iav_Karbium_State_Edit_tt: "We will Unlock §YIav Karbium§! State Edict, which grants §G+15%§! Local Production Efficiency\n"
  KBN_Alliance_of_states_reform: "Alliance of States"
  KBN_Alliance_of_states_reform_desc: " "
