--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -880,3 +880,40 @@
  saelian.17.desc: "The Recent fall of Tetrarch [missing_tetrarch.GetName] has forced him to relocate their base of operation. A proposal was made to establish a new electoral capital in [potential_tetrarch_capital.GetName]. While the demand is absurd, we should follow the emperor's orders."
  saelian.17.a: "I didn't like this city anyway..."
  saelian.17.b: "We will not give up our land to anyone!"
+
+ incident_northern_nobility: "The Northern Nobles"
+ incident_northern_nobility_member_alert: "The so-called 'colonial' nobility of the northern empire have finally risen up to settle their privileges."
+ incident_northern_nobility_emperor_alert: "The so-called 'colonial' nobility of the northern empire have finally risen up to settle their privileges."
+ incident_southern_nobility: "The Southern Cities"
+ incident_southern_nobility_member_alert: "The chaos caused by the new privileges given to the old-blood nobility led to mass immigration outside of the empire and into the cities."
+ incident_southern_nobility_emperor_alert: "The chaos caused by the new privileges given to the old-blood nobility led to mass immigration outside of the empire and into the cities."
+
+ every_province_in_hre_tt: "Every province in the Saelian Empire will get:"
+ SE_incident.200.t: "The Northern Nobles"
+ SE_incident.200.desc: "REPLACE_ME"
+ SE_incident.200.a: "The diet will deal with this."
+ SE_incident.201.t: "The Northern Nobles"
+ SE_incident.201.desc: "REPLACE_ME"
+ SE_incident.201.a: "Power of the northern nobles must be contained."
+ lichter_unrest_mod: "Lichterian Uprising"
+ desc_lichter_unrest_mod: "The Nobles of Lichter and their allies have organized a rebellion across all of the northern provinces."
+ SE_incident.201.b: "We will elevate the southern nobles so that they privileges match the colonial nobility."
+ SE_incident.201.c: "A new Kuninstofship will effectively solve this problem"
+ SE_incident.202.t: "[Root.GovernmentName] of [Root.Owner.GetName] and the Empire"
+ SE_incident.202.desc: "The wind of change has finally struck [Root.GetName]. With the growing ambitions of glorious [Root.Monarch.GetTitle] [Root.Monarch.GetName] we have reached a point where we are the ones to decide our own fate and not be dependent on other states. This poses important question - should we remain loyal to the emperor or stand on our own in this new and changing world?"
+ SE_incident.202.a: "We shall remain faithful to [Emperor.Monarch.GetName]."
+ SE_incident.202.b: "We shall forge our own path."
+ SE_incident.203.t: "The commoner displacement"
+ SE_incident.203.desc: "REPLACE_ME"
+ SE_incident.203.a: "This must be brought before the diet immediately"
+ SE_incident.300.t: "The Southern Cities"
+ SE_incident.300.desc: "REPLACE_ME"
+ SE_incident.300.a: "The situation stabilize itself soon enough."
+ SE_incident.300.b: "We have to establish more free cities."
+ SE_incident.300.c: "Giving nobles more power is the only solution."
+ incident_expanded_city_rights: "Expanded Urban Rights"
+ desc_incident_expanded_city_rights: "The emperor has graciously founded countless new cities to accomodate the free peasants and commoners."
+
+ estate_nobles_noble_cities: "Urban Serfdom"
+ estate_nobles_noble_cities_desc: "The status of the urban population of the empire is now not so different from the peasantry, greatly strengthening the nobles."
+ increase_peasant_rebels_spawn_tt: "Greatly Increases the chances of peasant rebels."
