--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -895,6 +895,7 @@
  SE_incident.201.t: "The Northern Nobles"
  SE_incident.201.desc: "REPLACE_ME"
  SE_incident.201.a: "Power of the northern nobles must be contained."
+ SE_incident.201.a_tt: "Every owned Nähtrucer or Middle Magreiner province will get:"
  lichter_unrest_mod: "Lichterian Uprising"
  desc_lichter_unrest_mod: "The Nobles of Lichter and their allies have organized a rebellion across all of the northern provinces."
  SE_incident.201.b: "We will elevate the southern nobles so that they privileges match the colonial nobility."
