--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -890,10 +890,10 @@
 
  every_province_in_hre_tt: "Every province in the Saelian Empire will get:"
  SE_incident.200.t: "The Northern Nobles"
- SE_incident.200.desc: "REPLACE_ME"
+ SE_incident.200.desc: "Originally, the nobility of the empire was divided into 2 parts - the 'old blood' Silvestrian nobility, descending from various kuninstofs and local heroes, and the 'New Blood' nobility of the Camarian origin. With the expansion of the empire north of the Limmontes, a new kind of nobility emerged. Settlers willing to expand in the northern lands have been given wildly different privileges of the southern nobility in order to encourage expansion in the north. Their vast influence in the relatiely lawless regions allowed them to consolidate much power.\n\nWith the ascension of [Root.Monarch.GetName] as the ruler of the north not only as the emperor, but also as the prince created a peculiar administrative problem, which is creating increasingly tense situation in the empire."
  SE_incident.200.a: "The diet will deal with this."
  SE_incident.201.t: "The Northern Nobles"
- SE_incident.201.desc: "REPLACE_ME"
+ SE_incident.201.desc: "Originally, the nobility of the empire was divided into 2 parts - the 'old blood' Silvestrian nobility, descending from various kuninstofs and local heroes, and the 'New Blood' nobility of the Camarian origin. With the expansion of the empire north of the Limmontes, a new kind of nobility emerged. Settlers willing to expand in the northern lands have been given wildly different privileges of the southern nobility in order to encourage expansion in the north. Their vast influence in the relatiely lawless regions allowed them to consolidate much power.\n\nWith the ascension of [Root.Monarch.GetName] as the ruler of the north not only as the emperor, but also as the prince created a peculiar administrative problem, which is creating increasingly tense situation in the empire."
  SE_incident.201.a: "Power of the northern nobles must be contained."
  SE_incident.201.a_tt: "Every owned Nähtrucer or Middle Magreiner province will get:"
  lichter_unrest_mod: "Lichterian Uprising"
@@ -905,11 +905,11 @@
  SE_incident.202.a: "We shall remain faithful to [Emperor.Monarch.GetName]."
  SE_incident.202.b: "We shall forge our own path."
  SE_incident.203.t: "The commoner displacement"
- SE_incident.203.desc: "REPLACE_ME"
+ SE_incident.203.desc: "With the privileges of the Magreiner nobles transfered in the south, many of the commoners living in these lands have lost some of all of their autonomy. Taking advantage of the chaos and special status of the free cities, many are fleeing their homes in order to attempt living an urban life. Villages and towns are being left in dissaray, fields are slowly being overgrown by weeds and the houses slowly rot. Many are calling for the emperor to solve the coming food shortage, depopulation and overcrowded cities."
  SE_incident.203.a: "This must be brought before the diet immediately"
  SE_incident.300.t: "The Southern Cities"
- SE_incident.300.desc: "REPLACE_ME"
- SE_incident.300.a: "The situation stabilize itself soon enough."
+ SE_incident.300.desc: "With the privileges of the Magreiner nobles transfered in the south, many of the commoners living in these lands have lost some of all of their autonomy. Taking advantage of the chaos and special status of the free cities, many are fleeing their homes in order to attempt living an urban life. Villages and towns are being left in dissaray, fields are slowly being overgrown by weeds and the houses slowly rot. Many are calling for the emperor to solve the coming food shortage, depopulation and overcrowded cities."
+ SE_incident.300.a: "The situation will stabilize itself soon enough."
  SE_incident.300.b: "We have to establish more free cities."
  SE_incident.300.c: "Giving nobles more power is the only solution."
  incident_expanded_city_rights: "Expanded Urban Rights"
