--- a/localisation/TD_parliaments_l_english.yml
+++ b/localisation/TD_parliaments_l_english.yml
@@ -4,3 +4,4 @@
  NAB_parliament_name: "Cunnadhul"
  CAT_parliament_name: "Cunnadhul"
  west_yermic_group_parliament_name: "Yekhen"
+ OST_parliament_name: "Händlerversammlung"
